# smart-contract-2.0

./: .env.example  .gitignore  ALL_DEPLOYMENTS_STATUS.md  API_ENDPOINTS.md  ARCHITECTURE.md  BROWSER_TEST_GUIDE.md  CHANGELOG.md  COMMANDS_CHEATSHEET.md  COMPLETE_DEPLOYMENT_STATUS.md  COMPLETE_GUIDE.md  CONTRIBUTING.md  CORS_FIXED.md  CURRENT_STATUS.md  DEMO_STRATEGY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_VPS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VISUAL_GUIDE.md  DEPLOY_CHECKLIST.md  DEPLOY_IMMEDIATELY.sh  DEPLOY_NOW.md  DEPLOY_TO_MY_VPS.md  DEPLOY_TO_TESTNET_NOW.md  DOCS_INDEX.md  DOCS_INDEX_COMPLETE.md  EXAMPLES.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIX_APPLIED.md  (+80 more)
linera-integration/: BUILD_SUCCESS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  README_COMPLETE.md  README_SIMPLE.md  mock-linera-service.cjs
linera-integration/oracle-client/: full-integration.js  linera-oracle.js  package-lock.json  package.json  server.js  test.js
linera-integration/scripts/: deploy-local-devnet.sh  deploy-local.sh  deploy-testnet.sh  deploy.sh  full-deploy.sh  quick-start.sh  test-build.sh
linera-integration/smart-contract-2-deploy/: Cargo.toml
linera-integration/smart-contract-2-deploy/src/: contract.rs  lib.rs  service.rs  state.rs
linera-integration/src/: contract.rs  lib.rs  service.rs  state.rs
(+55 files in other folders)
