[package]
name = "smart-contract-2-linera"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
futures = "0.3"
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.6", features = ["test"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
